--- a/style.css
+++ b/style.css
@@ -714,16 +714,114 @@ ul.nav li a {
 }
 
 @media screen and (max-width: 600px) {
-    .slideshow-container {
-        position: relative;
-        display: block;
-        visibility: visible;
-        background: url(images/cta2/cta2-bg.jpg);
-        background-size: contain;
-    }
-
     
-    .intro a {
+.main {
+    top:40vh;
+    left:0;
+    overflow-x: hidden;
+    margin:0;
+}
+    
+.slideshow-container {
+    position: relative;
+    display: block;
+    visibility: visible;
+    background-image: url("./images/slider/bg1.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position:center center;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    background: #66696C;
+    outline: none;
+    opacity: 0.9;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    position: absolute;
+    bottom: -5%;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15%;;
+    height: 5px;
+    opacity:1 !important;
+    float:left;
+    background: #5CADD3;
+    cursor: pointer;
+    position: absolute;
+    left:-10px;
+    top:0px;
+}
+
+.slider::-moz-range-thumb {
+    width: 100px;
+    height: 5px;
+    float: left;
+    opacity:1;
+    background: #5CADD3;
+    cursor: pointer;
+}
+
+.slider_nav {
+    background: rgba(25, 25, 25, 0.4);
+    display: inline-block;
+    padding: 5px 12px 5px 10px;
+    border-radius: 40%;
+    border-right: 0;
+    position: absolute;
+
+}
+
+.prev {
+    padding: 5px 5px 10px 25px;
+    top: calc(50% - 20px);
+    left:-50px;
+    color:white;
+}
+
+.next {
+    padding: 20px 50px 20px 10px;
+    top: calc(50% - 20px);
+    right: -40px;
+    color:white;
+    background-size: 100% 2%;
+    background-repeat: no-repeat;
+    background-origin: content-box;
+}
+
+.intro {
+    color: white;
+    font-size:1em;
+    width:40%;
+    height: ;
+    margin: 0;
+    padding:1% 1%;
+    position: absolute;
+    top: 45%;
+    left: 23%;
+    -ms-transform: translate(-23%, -50%);
+    transform: translate(-23%, -50%);
+    overflow:hidden;
+    clear:both;
+}
+
+.intro h1 {
+    color: white;
+    font-family: Roboto-Bold;
+    font-size:1em;
+}
+    
+.intro a {
     background-color: #5CADD3;
     margin-top: 1%;
     text-align: center;
@@ -738,8 +836,8 @@ ul.nav li a {
     width:23%;
     overflow: hidden;
 }
+    
 }
-
 @media only screen and (min-width: 992px) {
     .intro {
     color: white;
